Fixed off-center pause button

--- a/includes/photoslider.css
+++ b/includes/photoslider.css
@@ -103,7 +103,7 @@
 }
 
 .photoslider_stop {
-	background: url('../images/play_pause.gif') no-repeat -25px 0px;
+	background: url('../images/play_pause.gif') no-repeat -21px 0px;
 }
 
 .slideshow_disabled {
